--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1{
-    color: chartreuse;
-    background-color: black;
+    color: black;
+    background-color:lightpink;
     font-size: 40px;
 }
